# Ether-Uprotector

./: .gitignore  Ether.sln  O&Z_IL2CPP_Security.sln  OrangeIL2CPP Pro.sln  README.md  README_zh-cn.md
Configs/: Config.json  (+1 more)
Ether_IL2CPP_Auto/: CMakeLists.txt  EtherIl2cpp.ini  OZ_Il2cpp_Console.cpp  OZ_Il2cpp_Console.sln  OZ_Il2cpp_Console.vcxproj  OZ_Il2cpp_Console.vcxproj.filters  README-zh-cn.md  README.md  README_zh-cn.md  SecurityManager.cpp  SecurityManager.h  binary_encrypt_mgr.cpp  binary_encrypt_mgr.h  cpp_mgr.cpp  cpp_mgr.h  encryption.h  il2cpp_lib_mgr.cpp  il2cpp_lib_mgr.h  lib_plugins_mgr.cpp  lib_plugins_mgr.h  metadata_mgr.cpp  metadata_mgr.h  ozil2_script_mgr.cpp  ozil2_script_mgr.h  str_encrypt_mgr.cpp  str_encrypt_mgr.h  utils.cpp  utils.h
Ether_IL2CPP_Auto/include/: json.cpp  json.h
Ether_IL2CPP_Auto/oz_scripts/: generate_script.py  mdc.ozs  metadataheader.ozs
Ether_IL2CPP_Auto/src/: encrypt_config.h  encrypt_file_config.h  ether_il2cpp_api.cpp  ether_il2cpp_api.h  main.cpp
Ether_IL2CPP_Auto/src/encryption-base/: binary_encrypt_mgr.cpp  binary_encrypt_mgr.h  cpp_mgr.cpp  cpp_mgr.h  encryption.cpp  encryption.h  err_code.h  il2cpp_lib_mgr.cpp  il2cpp_lib_mgr.h  ozil2_script_mgr.cpp  ozil2_script_mgr.h  static_res.h  str_encrypt_mgr.cpp  str_encrypt_mgr.h  utils.cpp  utils.h
Ether_IL2CPP_Auto/src_res/: encryption.cpp  encryption.h  front_head.h  init_con.cpp  mdc.cpp  mdc_getstr.cpp  mdc_getstrlit.cpp  mdc_init.cpp  mdc_init_assert.cpp  metadata_header_repl.txt  xxtea.cpp
Ether_IL2CPP_Auto/static-res/oz_scripts/: generate_script.py  mdc.ozs
(+394 files in other folders)
